--- a/source/search_filter.html
+++ b/source/search_filter.html
@@ -31,10 +31,10 @@ provides a syntax for expressing a set of query expressions on the underlying re
 <li><code>Patient: name co "pet"</code> - all patients with the characters "pet" in a given or family name</li>
 <li><code>Patient: given eq "peter" and birthdate ge 2014-10-10</code> - all patients with a given name of peter, born on or after 10-Oct 2014</li>
 <li><code>Observation: code eq http://loinc.org|1234-5</code> - all observations with the LOINC code "1234-5"</li>
-<li><code>Observation: subject.name co "pet"</code> - all observations on a patient with the characters "pet" in a given or family name</li>
+<li><code>Observation: patient.name co "pet"</code> - all observations on a patient with the characters "pet" in a given or family name</li>
 <li><code>Observation: related[type eq "has-component"].target pr true</code> - all observations that have component observations (note: this uses one of the search parameters defined for this mechanism, see below)</li>
 <li><code>Observation: related[type eq has-component].target re Observation/4</code> - all observations that have Observation/v as a component</li>
-<li><code>Observation: subject.id eq 3425 and code-value-quantity eq code$loinc|12907-2,value$ge150|http://unitsofmeasure.org|mmol/L</code> - all observations for a particular patient that have a LOINC code of "12907-2" (Sodium [Moles/volume] in Red Blood Cells) AND a value greater than "150 mmol/L"</li>
+<li><code>Observation: patient.id eq 3425 and code-value-quantity eq code$loinc|12907-2,value$ge150|http://unitsofmeasure.org|mmol/L</code> - all observations for a particular patient that have a LOINC code of "12907-2" (Sodium [Moles/volume] in Red Blood Cells) AND a value greater than "150 mmol/L"</li>
 <li><code>Patient: given eq "peter" and birthdate ge 2014-10-10 and _has:Observation:patient:code eq http://loinc.org|1234-5</code> - 
 	all patients with a given name of peter, born on or after 10-Oct 2014 that have an observation referring to them with a LOINC code of 1234-5</li>
 </ul>
