FHIR-50926 - fix link

--- a/source/subscriptions.html
+++ b/source/subscriptions.html
@@ -111,7 +111,7 @@
 <a name="relationtomessaging"/>
 <h3>Relation to Messaging</h3>
 <p>
-  FHIR <a href="messaging.html">Messaging</a> is a message-based protocol which can be used for communication. When combining Messaging and Subscriptions, complete notifications are wrapped into Messaging Bundles.  More details are provided <a href="#messaging">below</a>.
+  FHIR <a href="messaging.html">Messaging</a> is a message-based protocol which can be used for communication. When combining Messaging and Subscriptions, complete notifications are wrapped into Messaging Bundles.  More details are provided <a href="subscription.html#messaging">below</a>.
 </p>
 
 <a name="overview-workflow"/>
