--- a/source/versioning.html
+++ b/source/versioning.html
@@ -188,7 +188,7 @@ This technique can be used with all versions of FHIR, including R2 and R3:
 <p>
 Note that the url pattern <code>http://hl7.org/fhir/{ver}/StructureDefinition/{type}</code> is
 not the normal URL for the relevant structure definitions. StructureDefinitions with these 
-URLs are found in the package <code>hl7.fhir.r{x}.core{x}</code> e.g. <code>hl7.fhir.r4.core4</code>.
+URLs are found in the package <code>hl7.fhir.r{x}.core</code> e.g. <code>hl7.fhir.r4.core</code>.
 </p>
 
 <a name="managing"> </a>
