--- a/source/storage.html
+++ b/source/storage.html
@@ -50,7 +50,7 @@ To illustrate this, consider using an RxNorm code as a medication code. In a pre
   &lt;concept&gt;
    &lt;coding&gt;
      &lt;system value="http://www.nlm.nih.gov/research/umls/rxnorm"/&gt;
-     &lt;code value=""/&gt;
+     &lt;code value="123431232"/&gt;
    &lt;/coding&gt;
    &lt;/concept&gt;
   &lt;/medication&gt;
