--- a/source/summary.html
+++ b/source/summary.html
@@ -90,7 +90,7 @@ community is growing quickly.
 <a name="status"></a>
 <h2>The FHIR development process</h2>
 <p>
-Candidate additions to the FHIR specification are developed on other publications. 
+Candidate additions to the FHIR specification are developed in other publications. 
 For a list, see <b>link to be provided</b>.
 </p>
 
