--- a/source/versions.html
+++ b/source/versions.html
@@ -1165,13 +1165,13 @@ Note for balloters: the R5 packages will be created when R5 is finalized. Until 
 <a name="plans"></a>
 <h3>Plans for future releases</h3>
 <p>
-This specification is the result of fifteen years of work by HL7, it's standards, government and implementation partners, 
-along with the wider (huge) FHIR implementation community. This is the first full version of the standard - none of the 
+This specification is the result of fifteen years of work by HL7, its standards, government and implementation partners, 
+along with the wider (huge) FHIR implementation community. This is the first full normative version of the standard - none of the 
 content in this specification is considered trial-use. 
 </p>
 <p>
 The FHIR implementation community and implementation base is now massive and the pace of implementation adoption of
-ew versions is slowing. 
+new versions is slowing. 
 </p>
 <p>
 Note that for this release, the extensions have been moved out into a separate module and updated
