rewrite based on experience

--- a/source/conformance-module.html
+++ b/source/conformance-module.html
@@ -166,7 +166,11 @@ running the risk of being misconfigured.</li>
 <h3>Developmental Roadmap</h3>
 
 <p>
-The following resources are normative, and stable, and no further changes to scope or the existing content are planned:
+Ongoing feedback is welcome on all the conformance resources, particularly based on implementation 
+experience. 
+</p>
+<p>
+The following resources are in maintenance mode:
 </p>
 <ul>
   <li><a href="structuredefinition.html">StructureDefinition</a></li>
@@ -175,16 +179,12 @@ The following resources are normative, and stable, and no further changes to sco
   <li><a href="searchparameter.html">SearchParameter</a></li>
   <li><a href="implementationguide.html">ImplementationGuide</a></li>
   <li><a href="compartmentdefinition.html">CompartmentDefinition</a>. Note that HL7 is expected to be the only publisher of this resource</li>
+  <li><a href="messagedefinition.html">MessageDefinition</a></li>
+  <li><a href="structuremap.html">StructureMap</a>. Note that new features in the mapping language might involve addition of new content to this resource</li>
 </ul>    
 <p>
-  These resources are stable, but may attract additional scope, features and data elements:
-</p>
-<ul>
-<li><a href="structuremap.html">StructureMap</a></li>
-<li><a href="messagedefinition.html">MessageDefinition</a>: </li>
-</ul>    
-<p>
-Finally, the GraphDefinition resource is still subject to additional change, so is found in the <a href="http://build.fhir.org/HL7/api-incubator/StructureDefinition-GraphDefinition">API Incubator</a>
+The GraphDefinition resource is still subject to additional change based on implementation experience, 
+so is found in the <a href="http://build.fhir.org/HL7/api-incubator/StructureDefinition-GraphDefinition">API Incubator</a>
 </p>
 
 [%file newfooter%]
