--- a/source/packages.html
+++ b/source/packages.html
@@ -143,6 +143,11 @@ specification, and defines some additional FHIR specific properties.
     <td>A URL with the syntax <code>{system}#{code}</code>, from the <a href="https://terminology.hl7.org/ValueSet-jurisdiction.html">Jurisdiction</a> ValueSet. This value is provided to help users find the right package in the package registry</td>
   </tr>
   <tr>
+    <td><b>languages</b></td>
+    <td>optional</td>
+    <td>An array of strings, where each value is an IETF language code from <a href="valueset-all-languages.html">AllLanguages ValueSet</a>, and indicates that the package contains content suitable for the specified language</td>
+  </tr>
+  <tr>
     <td><b>fhirVersions</b></td>
     <td>optional</td>
     <td>An array of the FHIR Versions used by the package. Most packages only use one version. In some older packages, this was named fhir-version-list. The value of this property can be determined by inspecting the package</td>
