FHIR-48885 Clarify applicability of RFC 8174 (updates 2119)

--- a/source/conformance-rules.html
+++ b/source/conformance-rules.html
@@ -81,7 +81,7 @@ CapabilityStatement have little meaning because they cannot be tested/verified.
 
 <a name="conflang"></a>
 <h3>Conformance Language</h3>
-<p>This specification uses the conformance verbs SHALL, SHOULD, and MAY as defined in RFC 2119. Unlike RFC 2119, however, this specification allows that different applications might not be able to interoperate because of how they use optional features. In particular:</p>
+<p>This specification uses the conformance verbs SHALL, SHOULD, and MAY as defined in the RFC 8174 clarification of RFC 2119. Unlike RFC 2119, however, this specification allows that different applications might not be able to interoperate because of how they use optional features. In particular:</p>
 
 <ol><li>SHALL: an absolute requirement for all implementations</li>
 <li>SHALL NOT: an absolute prohibition against inclusion for all implementations</li>
