FHIR-46404 Documentation error in R5 Search docs page.

--- a/source/search.html
+++ b/source/search.html
@@ -5777,8 +5777,8 @@ that an observation has been tagged as potentially life-threatening or with the 
   of a resource.
 </p>
 <p>
-  The <code>_text</code> search parameter is defined as a <a href="#string">string</a> type parameter.
-  While the actual format used by the parameter is implementation-dependant, the search is some form of string
+  The <code>_text</code> search parameter is defined as a <a href="#special">special</a> type parameter.
+  While the actual format used by the parameter is implementation-dependant, the search is some form of text
   which can be used for advanced searching.
 </p>
 <p>
