FHIR-46101 Add guidance about using _include:iterate

--- a/source/search.html
+++ b/source/search.html
@@ -1693,6 +1693,18 @@ code=http://snomed.info/sct|3738000&amp;_include=Observation:patient&amp;_includ
     More information can be found in the section <a href="#include">Including other resources</a>
   </p>
 
+[%dragons-start%]
+<h6>Performance Warning</h6>
+<p>
+Note that the iterate modifier causes implementations to perform a sub-query for each iterate directive for each resource it is based on.
+Using iterate directives can often reduce the total processing time of a set of queries (by reducing the number of round-trips) but
+can significantly increase the processing time of a single query.As noted in <a href="#include">Including Referenced Resources</a>, 
+servers have discretion about limiting the depth of recursion, which iterations to support, and how many resources to include. 
+When results are truncated, it is recommended for servers to inform clients via search outcome.
+
+</p>
+[%dragons-end%]
+
   <a name="modifiermissing"></a>
   <h5>missing</h5>
   <p>
@@ -4993,7 +5005,7 @@ _include=MedicationDispense:prescription&amp;_include:iterate=MedicationRequest:
 </p>
 <p>
   Details about the <code>iterate</code> modifier can be found in the section 
-  <a href="#modifieriterate">Modifier: iterate</a>.
+  <a href="#modifieriterate">Modifier: iterate</a>, including potential performance considerations.
 </p>
 <p>
 This technique applies to circular relationships as well. For example,
